base-infra/keycloak/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-auth-dev
  labels:
    name: platform-auth-dev
    environment: development
