base-infra/keycloak/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: platform-auth-dev
spec:
  parentRefs:
  - name: gateway-dev
    namespace: istio-system
  hostnames:
  - "auth-dev.yu-min3.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      port: 8080
